# Motor-Engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md
data/: extras.txt  test.txt
src/: game.cpp  unicode.cpp  unicode.h
src/common/: game.cpp
src/common/asset/: audiosrc.hpp  preprocessor.cpp  preprocessor.hpp  shader.cpp  shader.hpp  shaderfile.cpp  shaderfile.hpp
src/common/math/: point.hpp  sse.hpp  types.hpp
src/common/util/: exceptions.cpp  exceptions.hpp  tokenizer.cpp  tokenizer.hpp  unicode.cpp  unicode.hpp
src/posix/: platform.cpp  platform.hpp
src/posix/fs/: mappedfile.cpp  mappedfile.hpp
src/posix/util/: stopwatch.cpp  stopwatch.hpp
src/win/: platform.cpp  platform.hpp
src/win/fs/: mappedfile.cpp  mappedfile.hpp
src/win/util/: stopwatch.cpp  stopwatch.hpp
